--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -3,11 +3,15 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows7.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Images\icon_48.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Images\login.png" />
+    <None Remove="Images\login1.png" />
     <None Remove="Images\user.jpg" />
-    <None Remove="Images\wind.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\icon_48.ico" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HandyControl" Version="3.5.1" />
@@ -20,8 +24,8 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\login.png" />
+    <Resource Include="Images\login1.png" />
     <Resource Include="Images\user.jpg" />
-    <Resource Include="Images\wind.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
