--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <None Remove="Images\login.png" />
     <None Remove="Images\login1.png" />
+    <None Remove="Images\logo.png" />
     <None Remove="Images\user.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -15,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HandyControl" Version="3.5.1" />
+    <PackageReference Include="LayUI.Wpf" Version="1.0.2.240622" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
@@ -25,9 +27,11 @@
   <ItemGroup>
     <Resource Include="Images\login.png" />
     <Resource Include="Images\login1.png" />
+    <Resource Include="Images\logo.png" />
     <Resource Include="Images\user.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Config\" />
+    <Folder Include="Menu\" />
   </ItemGroup>
 </Project>
