--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -11,6 +11,7 @@
     <None Remove="Images\Button\Log.png" />
     <None Remove="Images\Button\Pause.png" />
     <None Remove="Images\Button\Sample.png" />
+    <None Remove="Images\Button\Start.png" />
     <None Remove="Images\Button\Stop.png" />
     <None Remove="Images\Calibrate.png" />
     <None Remove="Images\Control.png" />
@@ -31,6 +32,7 @@
     <PackageReference Include="LayUI.Wpf" Version="1.0.2.240622" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="OxyPlot.Wpf" Version="2.1.2" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
   <ItemGroup>
@@ -41,6 +43,7 @@
     <Resource Include="Images\Button\Log.png" />
     <Resource Include="Images\Button\Pause.png" />
     <Resource Include="Images\Button\Sample.png" />
+    <Resource Include="Images\Button\Start.png" />
     <Resource Include="Images\Button\Stop.png" />
     <Resource Include="Images\SideMenu\Advance.png" />
     <Resource Include="Images\SideMenu\Calibrate.png" />
