--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -16,6 +16,8 @@
     <None Remove="Images\Calibrate.png" />
     <None Remove="Images\Control.png" />
     <None Remove="Images\Data.png" />
+    <None Remove="Images\DataGrid\Delete.png" />
+    <None Remove="Images\DataGrid\Edit.png" />
     <None Remove="Images\FermentationTank.png" />
     <None Remove="Images\Home.png" />
     <None Remove="Images\login.png" />
@@ -30,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HandyControl" Version="3.5.1" />
+    <PackageReference Include="log4net" Version="2.0.17" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.1.2" />
@@ -49,6 +52,10 @@
     <Resource Include="Images\Calibrate.png" />
     <Resource Include="Images\Control.png" />
     <Resource Include="Images\Data.png" />
+    <Resource Include="Images\DataGrid\Delete.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\DataGrid\Edit.png" />
     <Resource Include="Images\Home.png" />
     <Resource Include="Images\Project.png" />
     <Resource Include="Images\Settings.png" />
@@ -69,7 +76,16 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Update="App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Assets\NotoSans-Regular.otf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\Alarm.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\Communication.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Config\Const.json">
@@ -77,6 +93,9 @@
     </None>
     <None Update="Config\User.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\Command.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Config\Var.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
