--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Language\LanguageExtension.cs" />
+    <Compile Remove="Views\EditScaleView.xaml.cs" />
+    <Compile Remove="Views\UserControl1.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Images\Advance.png" />
@@ -23,9 +25,9 @@
     <None Remove="Images\DataGrid\Edit.png" />
     <None Remove="Images\Debug.png" />
     <None Remove="Images\FermentationTank.png" />
-    <None Remove="Images\Home.png" />
     <None Remove="Images\login.png" />
     <None Remove="Images\logo.png" />
+    <None Remove="Images\Main.png" />
     <None Remove="Images\Project.png" />
     <None Remove="Images\Projects.png" />
     <None Remove="Images\Settings.png" />
@@ -34,6 +36,8 @@
   <ItemGroup>
     <Page Remove="Lang\Lang.en-US.xaml" />
     <Page Remove="Lang\Lang.zh-CN.xaml" />
+    <Page Remove="Views\EditScaleView.xaml" />
+    <Page Remove="Views\UserControl1.xaml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\icon_48.ico" />
@@ -47,7 +51,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="HandyControl" Version="3.5.1" />
     <PackageReference Include="LayUI.Wpf.Extensions" Version="1.0.2.240505" />
     <PackageReference Include="log4net" Version="2.0.17" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
@@ -58,6 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RD3.Shared\RD3.Shared.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="HandyControl">
+      <HintPath>..\ImportDll\HandyControl.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Button\Inoculate.png" />
@@ -73,7 +81,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\DataGrid\Edit.png" />
-    <Resource Include="Images\Home.png" />
+    <Resource Include="Images\Main.png" />
     <Resource Include="Images\Project.png" />
     <Resource Include="Images\Debug.png" />
     <Resource Include="Images\Settings.png" />
