--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -199,6 +199,9 @@
     <None Update="Config\Var.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Instruction\video.mp4">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Themes\WaveAnimation.xaml">
