暂存 主界面-曲线Tag 1.底部坐标轴可更换成时、天、月 2.坐标轴值范围可自定义

--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -29,6 +29,7 @@
     <None Remove="Images\Main\AF.png" />
     <None Remove="Images\Main\Agit.png" />
     <None Remove="Images\Main\Agit_ass.png" />
+    <None Remove="Images\Main\Agit_Primary.png" />
     <None Remove="Images\Main\Air.png" />
     <None Remove="Images\Main\Base.png" />
     <None Remove="Images\Main\Base_ass.png" />
@@ -40,9 +41,12 @@
     <None Remove="Images\Main\MLUnit.png" />
     <None Remove="Images\Main\N2.png" />
     <None Remove="Images\Main\O2.png" />
+    <None Remove="Images\Main\O2_Primary.png" />
     <None Remove="Images\Main\PH.png" />
     <None Remove="Images\Main\PH_ass.png" />
+    <None Remove="Images\Main\PH_Primary.png" />
     <None Remove="Images\Main\Temp.png" />
+    <None Remove="Images\Main\Temp_Primary.png" />
     <None Remove="Images\Projects.png" />
     <None Remove="Images\SideMenu\Audit.png" />
     <None Remove="Images\SideMenu\Audit_Primary.png" />
@@ -117,20 +121,24 @@
     <Resource Include="Images\Main\AF.png" />
     <Resource Include="Images\Main\Agit.png" />
     <Resource Include="Images\Main\Agit_ass.png" />
+    <Resource Include="Images\Main\Agit_Primary.png" />
     <Resource Include="Images\Main\Air.png" />
     <Resource Include="Images\Main\Base.png" />
     <Resource Include="Images\Main\Base_ass.png" />
     <Resource Include="Images\Main\CO2.png" />
     <Resource Include="Images\Main\DO.png" />
     <Resource Include="Images\Main\DO_ass.png" />
+    <Resource Include="Images\Main\O2_Primary.png" />
     <Resource Include="Images\Main\Feed.png" />
     <Resource Include="Images\Main\Feed_ass.png" />
     <Resource Include="Images\Main\MLUnit.png" />
     <Resource Include="Images\Main\N2.png" />
     <Resource Include="Images\Main\O2.png" />
     <Resource Include="Images\Main\PH.png" />
+    <Resource Include="Images\Main\PH_Primary.png" />
     <Resource Include="Images\Main\Temp.png" />
     <Resource Include="Images\Main\PH_ass.png" />
+    <Resource Include="Images\Main\Temp_Primary.png" />
     <Resource Include="Images\SideMenu\Audit.png" />
     <Resource Include="Images\SideMenu\Audit_Primary.png" />
     <Resource Include="Images\SideMenu\Calibrate.png" />
