--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -94,6 +94,7 @@
     <PackageReference Include="LayUI.Wpf.Extensions" Version="1.0.2.240505" />
     <PackageReference Include="log4net" Version="2.0.17" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
+    <PackageReference Include="MathNet.Symbolics" Version="0.25.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
     <PackageReference Include="ScottPlot.WPF" Version="5.0.40" />
