--- a/Fpi.Instrument/Fpi.Instrument.csproj
+++ b/Fpi.Instrument/Fpi.Instrument.csproj
@@ -138,6 +138,16 @@
   <ItemGroup>
     <None Include="Resources\Remove.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Fpi.Util\Fpi.Util.csproj">
+      <Project>{6e37d7b3-8d08-4ef3-a924-3b87982ab246}</Project>
+      <Name>Fpi.Util</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Fpi.Xml\Fpi.Xml.csproj">
+      <Project>{3af9654d-39ee-4be9-8553-a9bb9b83a33b}</Project>
+      <Name>Fpi.Xml</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
