--- a/RD3/RD3.csproj
+++ b/RD3/RD3.csproj
@@ -20,8 +20,10 @@
     <None Remove="Images\Button\Sample.png" />
     <None Remove="Images\Button\Start.png" />
     <None Remove="Images\Button\Stop.png" />
+    <None Remove="Images\cloud.png" />
     <None Remove="Images\DataGrid\Delete.png" />
     <None Remove="Images\DataGrid\Edit.png" />
+    <None Remove="Images\DOE\Fullfactorial.png" />
     <None Remove="Images\Feed\Ass.png" />
     <None Remove="Images\Feed\Constant.png" />
     <None Remove="Images\Feed\Function.png" />
@@ -66,6 +68,7 @@
     <None Remove="Images\SideMenu\Data_Primary.png" />
     <None Remove="Images\SideMenu\Debug.png" />
     <None Remove="Images\SideMenu\Debug_Primary.png" />
+    <None Remove="Images\SideMenu\DOE.png" />
     <None Remove="Images\SideMenu\Main.png" />
     <None Remove="Images\SideMenu\Main_Primary.png" />
     <None Remove="Images\SideMenu\Project.png" />
@@ -101,24 +104,14 @@
     <PackageReference Include="SQLite" Version="3.13.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Fpi.Assembly\Fpi.Assembly.csproj" />
+    <ProjectReference Include="..\Fpi.Communication\Fpi.Communication.csproj" />
+    <ProjectReference Include="..\Fpi.Instrument\Fpi.Instrument.csproj" />
+    <ProjectReference Include="..\Fpi.Util\Fpi.Util.csproj" />
+    <ProjectReference Include="..\Fpi.Xml\Fpi.Xml.csproj" />
     <ProjectReference Include="..\RD3.Shared\RD3.Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Fpi.Assembly">
-      <HintPath>..\ImportDll\Fpi.Assembly.dll</HintPath>
-    </Reference>
-    <Reference Include="Fpi.Communication">
-      <HintPath>..\ImportDll\Fpi.Communication.dll</HintPath>
-    </Reference>
-    <Reference Include="Fpi.Instrument">
-      <HintPath>..\ImportDll\Fpi.Instrument.dll</HintPath>
-    </Reference>
-    <Reference Include="Fpi.Util">
-      <HintPath>..\ImportDll\Fpi.Util.dll</HintPath>
-    </Reference>
-    <Reference Include="Fpi.Xml">
-      <HintPath>..\ImportDll\Fpi.Xml.dll</HintPath>
-    </Reference>
     <Reference Include="HandyControl">
       <HintPath>..\ImportDll\HandyControl.dll</HintPath>
     </Reference>
@@ -130,11 +123,13 @@
     <Resource Include="Images\Button\Sample.png" />
     <Resource Include="Images\Button\Start.png" />
     <Resource Include="Images\Button\Stop.png" />
+    <Resource Include="Images\cloud.png" />
     <Resource Include="Images\DataGrid\Delete.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\DataGrid\Edit.png" />
     <Resource Include="Assets\logo.png" />
+    <Resource Include="Images\DOE\Fullfactorial.png" />
     <Resource Include="Images\Feed\Ass.png" />
     <Resource Include="Images\Feed\Constant.png" />
     <Resource Include="Images\Feed\Function.png" />
@@ -179,6 +174,7 @@
     <Resource Include="Images\SideMenu\Data_Primary.png" />
     <Resource Include="Images\SideMenu\Debug.png" />
     <Resource Include="Images\SideMenu\Debug_Primary.png" />
+    <Resource Include="Images\SideMenu\DOE.png" />
     <Resource Include="Images\SideMenu\Main.png" />
     <Resource Include="Images\SideMenu\Main_Primary.png" />
     <Resource Include="Images\SideMenu\Project.png" />
@@ -196,6 +192,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Assets\NotoSans-Regular.otf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\CommandManager.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\InstrumentManager.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Config\LibraryManager.xml">
