--- a/RD3.Shared/RD3.Shared.csproj
+++ b/RD3.Shared/RD3.Shared.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Behavior\" />
     <Folder Include="Rule\" />
     <Folder Include="CustomProtocol\" />
   </ItemGroup>
@@ -23,6 +24,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Fpi.Communication\Fpi.Communication.csproj" />
     <ProjectReference Include="..\Fpi.Xml\Fpi.Xml.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.8\System.Windows.Forms.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
