--- a/Fpi.Util/App.config
+++ b/Fpi.Util/App.config
@@ -21,7 +21,7 @@
 		<appender name="DebugAppender" type="log4net.Appender.RollingFileAppender">
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<Encoding value="UTF-8" />
-			<file value="Logs\Debug\" />
+			<file value="Logs\Platform\Debug\" />
 			<appendToFile value="true" />
 			<rollingStyle value="Composite" />
 			<datePattern value="yyyyMMdd&quot;.log&quot;" />
@@ -34,7 +34,7 @@
 				<levelMax value="DEBUG" />
 			</filter>
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date  异常:%exception 描述:%message%newline" />
+				<conversionPattern value="%date 描述:%message%newline" />
 			</layout>
 		</appender>
 
@@ -42,7 +42,7 @@
 		<appender name="InfoAppender" type="log4net.Appender.RollingFileAppender">
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<Encoding value="UTF-8" />
-			<file value="Logs\Info\" />
+			<file value="Logs\Platform\Info\" />
 			<appendToFile value="true" />
 			<rollingStyle value="Composite" />
 			<datePattern value="yyyyMMdd&quot;.log&quot;" />
@@ -63,7 +63,7 @@
 		<appender name="WarnAppender" type="log4net.Appender.RollingFileAppender">
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<Encoding value="UTF-8" />
-			<file value="Logs\Warn\" />
+			<file value="Logs\Platform\Warn\" />
 			<appendToFile value="true" />
 			<rollingStyle value="Composite" />
 			<datePattern value="yyyyMMdd&quot;.log&quot;" />
@@ -76,7 +76,7 @@
 				<levelMax value="WARN" />
 			</filter>
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date  扩展信息:%property  异常:%exception  警告信息:%message%newline" />
+				<conversionPattern value="%date 警告信息:%message%newline" />
 			</layout>
 		</appender>
 
@@ -85,7 +85,7 @@
 		<appender name="ErrorAppender" type="log4net.Appender.RollingFileAppender">
 			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
 			<Encoding value="UTF-8" />
-			<file value="Logs\Error\" />
+			<file value="Logs\Platform\Error\" />
 			<appendToFile value="true" />
 			<rollingStyle value="Composite" />
 			<datePattern value="yyyyMMdd&quot;.log&quot;" />
@@ -98,7 +98,7 @@
 				<levelMax value="ERROR" />
 			</filter>
 			<layout type="log4net.Layout.PatternLayout">
-				<conversionPattern value="%date  扩展信息:%property 异常:%exception 错误描述:%message%newline" />
+				<conversionPattern value="%date 异常:%exception 错误描述:%message%newline" />
 			</layout>
 		</appender>
 	</log4net>
